[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinference-instrumentation-google-genai"
dynamic = ["version"]
description = "OpenInference Google GenAI Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9, <3.14"
authors = [
  { name = "OpenInference Authors", email = "oss@arize.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api",
  "opentelemetry-instrumentation",
  "opentelemetry-semantic-conventions",
  "openinference-instrumentation>=0.1.17",
  "openinference-semantic-conventions",
  "wrapt",
]

[project.optional-dependencies]
instruments = [
  "google-genai >= 1.8.0",
]
test = [
  "google-genai >= 1.8.0",
  "opentelemetry-sdk",
]

[project.entry-points.opentelemetry_instrumentor]
google_genai = "openinference.instrumentation.google_genai:GoogleGenAIInstrumentor"

[project.entry-points.openinference_instrumentor]
google_genai = "openinference.instrumentation.google_genai:GoogleGenAIInstrumentor"

[project.urls]
homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-google-genai"

[tool.hatch.version]
path = "src/openinference/instrumentation/google_genai/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openinference"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests",
]

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = [
  "examples",
  "dist",
  "sdist",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "wrapt",
  "google.*",
  "proto.*",
  "grpc",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = false
