[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinference-instrumentation-harbor"
dynamic = ["version"]
description = "OpenInference Harbor Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10, <3.15"
authors = [
  { name = "OpenInference Authors", email = "oss@arize.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-instrumentation",
  "opentelemetry-semantic-conventions",
  "opentelemetry-exporter-otlp-proto-common",
  "openinference-instrumentation>=0.1.27",
  "openinference-semantic-conventions>=0.1.21",
]

[project.optional-dependencies]
instruments = [
  "harbor-ai",
]

[project.scripts]
harbor-to-otel = "openinference.instrumentation.harbor._cli:main"

[project.entry-points.opentelemetry_instrumentor]
harbor = "openinference.instrumentation.harbor:HarborInstrumentor"

[project.entry-points.openinference_instrumentor]
harbor = "openinference.instrumentation.harbor:HarborInstrumentor"

[project.urls]
Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-harbor"

[tool.hatch.version]
path = "src/openinference/instrumentation/harbor/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openinference"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
  "tests",
]

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = [
  "examples",
  "dist",
  "sdist",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "harbor",
  "harbor.*",
  "google.protobuf.*",
  "opentelemetry.exporter.otlp.proto.common.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  "examples",
  "dist",
  "sdist",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = false
