[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinference-instrumentation-haystack"
dynamic = ["version"]
description = "OpenInference Haystack Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8, <3.13"
authors = [
    { name = "OpenInference Authors", email = "oss@arize.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opentelemetry-api",
    "opentelemetry-instrumentation",
    "opentelemetry-semantic-conventions",
    "openinference-instrumentation>=0.1.15",
    "openinference-semantic-conventions",
    "wrapt",
    "typing-extensions",
]


[project.optional-dependencies]
instruments = [
    "haystack-ai >= 2.0.0",
]
test = [
    "haystack-ai==2.3.1",
    "cohere-haystack",
    "opentelemetry-sdk",
    "pytest-recording",
    "respx",
]

[project.urls]
Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-haystack"

[tool.hatch.version]
path = "src/openinference/instrumentation/haystack/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openinference"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = [
    "examples",
    "dist",
    "sdist",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "haystack.*",
    "datasets",
    "openinference.instrumentation.haystack.*",
    "wrapt",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = false
