[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinference-instrumentation-langchain"
dynamic = ["version"]
description = "OpenInference LangChain Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8, <3.13"
authors = [
  { name = "OpenInference Authors", email = "oss@arize.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "opentelemetry-api",
  "opentelemetry-instrumentation",
  "opentelemetry-semantic-conventions",
  "openinference-semantic-conventions>=0.1.3",
  "wrapt",
]

[project.optional-dependencies]
instruments = [
  "langchain_core >= 0.1.0",
]
test = [
  "langchain_core == 0.1.8",
  "langchain == 0.1.0",
  "langchain_openai == 0.0.2",
  "langchain-community == 0.0.10",
  "opentelemetry-sdk",
  "respx",
]
type-check = [
  "langchain_core == 0.1.0",
]

[project.urls]
Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-langchain"

[tool.hatch.version]
path = "src/openinference/instrumentation/langchain/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openinference"]

[tool.mypy]
plugins = []
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs  = true
strict = true
exclude = [
  "dist/",
]

[tool.ruff]
exclude = [".git", "__pycache__", "*_pb2.py*", "*.pyi"]
ignore-init-module-imports = true
line-length = 100
select = ["E", "F", "W", "I"]
target-version = "py38"

