[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinference-instrumentation-llama-index"
dynamic = ["version"]
description = "OpenInference LlamaIndex Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9, <3.14"
authors = [
  { name = "OpenInference Authors", email = "oss@arize.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api",
  "opentelemetry-instrumentation",
  "opentelemetry-semantic-conventions",
  "openinference-instrumentation>=0.1.17",
  "openinference-semantic-conventions>=0.1.9",
  "typing-extensions",
  "wrapt",
]

[project.optional-dependencies]
instruments = [
  "llama-index-core >= 0.12.3",
  "llama-index-multi-modal-llms-openai>=0.1.7",
]
test = [
  "llama-index == 0.12.3",
  "llama-index-core == 0.12.3",
  "llama-index-llms-openai",
  "llama_index.llms.anthropic",
  "llama-index-llms-groq",
  "pytest-vcr",
  "anthropic<0.41",
  "llama-index-multi-modal-llms-openai>=0.1.7",
  "openinference-instrumentation-openai",
  "opentelemetry-sdk",
  "respx",
]

[project.entry-points.opentelemetry_instrumentor]
llama_index = "openinference.instrumentation.llama_index:LlamaIndexInstrumentor"

[project.entry-points.openinference_instrumentor]
llama_index = "openinference.instrumentation.llama_index:LlamaIndexInstrumentor"

[project.urls]
Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-llama-index"

[tool.hatch.version]
path = "src/openinference/instrumentation/llama_index/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openinference"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
  "tests",
]

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = [
  "examples",
  "dist",
  "sdist",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "wrapt",
  "llama_index.llms.anthropic",
  "llama_index.llms.openai",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = false
