[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinference-instrumentation-openlit"
dynamic = ["version"]
description = "OpenInference OpenLIT Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9, <3.14"
authors = [
  { name = "OpenInference Authors", email = "oss@arize.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-sdk>=1.20.0",
  "openinference-instrumentation>=0.1.34",
  "openinference-semantic-conventions>=0.1.21",
  "opentelemetry-semantic-conventions-ai>=0.4.9"
]

[project.optional-dependencies]
test = [
  "openlit>=1.36.8",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp-proto-http",
  "pytest-recording",
  "semantic-kernel>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-openlit"

[tool.hatch.version]
path = "src/openinference/instrumentation/openlit/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openinference"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
  "tests",
]

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = [
  "examples",
  "dist",
  "sdist",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "wrapt",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = false 